--- a/codes/options/train/train_InvDN.yml
+++ b/codes/options/train/train_InvDN.yml
@@ -14,8 +14,8 @@ datasets:
   train:
     name: SIDD
     mode: LQGTRN
-    dataroot_GT: '' # path to training Clean images
-    dataroot_Noisy: '' # path to training Noisy images
+    dataroot_GT: '/kaggle/input/trainsidd/dataset_organized/groundtruth' # path to training Clean images
+    dataroot_Noisy: '/kaggle/input/trainsidd/dataset_organized/noisy' # path to training Noisy images
     dataroot_LQ: ~ # path to training reference LR images, not necessary, if not provided, LR images will be generated in dataloader
 
     use_shuffle: true
@@ -29,8 +29,8 @@ datasets:
   val:
     name: SIDD_val
     mode: LQGTRN
-    dataroot_GT: '' # path to validation Clean images
-    dataroot_Noisy: '' # path to validation Noisy images
+    dataroot_GT: '/kaggle/input/sidd-val-patches/validation-sidd/groundtruth' # path to validation Clean images
+    dataroot_Noisy: '/kaggle/input/sidd-val-patches/validation-sidd/noisy' # path to validation Noisy images
     dataroot_LQ: ~ # path to validation reference LR images, not necessary, if not provided, LR images will be generated in dataloader
 
 
