--- a/codes/options/train/train_InvDN.yml
+++ b/codes/options/train/train_InvDN.yml
@@ -5,7 +5,7 @@ name: InvDN_ResUnit_x4
 use_tb_logger: false
 model: InvDN
 scale: 4
-gpu_ids: [0, 1]
+gpu_ids: [0]
 
 
 #### datasets
@@ -49,7 +49,7 @@ network_G:
 #### path
 
 path:
-  pretrain_model_G:
+  pretrain_model_G:'768_G.pth'
   strict_load: true
   resume_state: ~
 
